# PyTorch-MeshData

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
torch_meshdata/: __init__.py  mesh_datamodule.py  mesh_dataset.py  mesh_loader.py  mesh_sampler.py
