[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-meshdata"
description = "PyTorch dataset utilities for arbitrary mesh based data"
readme = "README.md"
version = "0.1.0"
license = {file = "LICENSE"}
authors = [
  {name = "Cooper Simpson", email = "simpson.r.cooper@gmail.com"},
  {name = "Kevin Doherty", email = "kevin.doherty@colorado.edu"}
]
keywords = [
  "Machine Learning",
  "Deep Learning"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3-Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.6"
dependencies = [
]

[tool.setuptools]
packages = ["torch_meshdata"]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
