[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-meshdata"
description = "PyTorch dataset utilities for arbitrary mesh based data"
readme = "README.md"
version = "0.1.0"
license = {file = "LICENSE"}
authors = [
  {name = "Cooper Simpson", email = "simpson.r.cooper@gmail.com"},
  {name = "Kevin Doherty", email = "kevin.doherty@colorado.edu"}
]
keywords = [
  "Machine Learning",
  "Deep Learning"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.6"

dependencies = [
  "pytorch-lightning",
  "meshio",
  "h5py",
  "numpy",
  "natsort"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["torch_meshdata/"]

[tool.hatch.build.targets.sdist]
include = [
  "torch_meshdata/*.py",
  "torch_meshdata/**/*.py",
  "/test",
]
exclude = [
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
